Assignment_3/src/grammar.output
State 38 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 51 conflicts: 1 shift/reduce
State 52 conflicts: 1 shift/reduce
State 55 conflicts: 1 shift/reduce
State 390 conflicts: 1 shift/reduce


Grammar

    0 $accept: Global $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | '(' expression error

    6 constant: I_CONSTANT
    7         | F_CONSTANT
    8         | ENUMERATION_CONSTANT
    9         | BOOLEAN

   10 enumeration_constant: IDENTIFIER

   11 BOOLEAN: TRUE
   12        | FALSE

   13 string: STRING_LIT
   14       | CHAR_LIT
   15       | FUNC_NAME

   16 postfix_expression: primary_expression
   17                   | postfix_expression '[' expression ']'
   18                   | postfix_expression '(' ')'
   19                   | postfix_expression '(' argument_expression_list ')'
   20                   | postfix_expression '.' IDENTIFIER
   21                   | postfix_expression PTR_OP IDENTIFIER
   22                   | postfix_expression INC_OP
   23                   | postfix_expression DEC_OP

   24 argument_expression_list: assignment_expression
   25                         | argument_expression_list ',' assignment_expression

   26 unary_expression: postfix_expression
   27                 | INC_OP unary_expression
   28                 | DEC_OP unary_expression
   29                 | unary_operator cast_expression
   30                 | SIZEOF unary_expression
   31                 | SIZEOF '(' type_name ')'

   32 unary_operator: '&'
   33               | '*'
   34               | '+'
   35               | '-'
   36               | '~'
   37               | '!'

   38 cast_expression: unary_expression
   39                | '(' type_name ')' cast_expression
   40                | '(' type_name error cast_expression

   41 multiplicative_expression: cast_expression
   42                          | multiplicative_expression '*' cast_expression
   43                          | multiplicative_expression '/' cast_expression
   44                          | multiplicative_expression '%' cast_expression

   45 additive_expression: multiplicative_expression
   46                    | additive_expression '+' multiplicative_expression
   47                    | additive_expression '-' multiplicative_expression

   48 shift_expression: additive_expression
   49                 | shift_expression LEFT_OP additive_expression
   50                 | shift_expression RIGHT_OP additive_expression

   51 relational_expression: shift_expression
   52                      | relational_expression '<' shift_expression
   53                      | relational_expression '>' shift_expression
   54                      | relational_expression LE_OP shift_expression
   55                      | relational_expression GE_OP shift_expression

   56 equality_expression: relational_expression
   57                    | equality_expression EQ_OP relational_expression
   58                    | equality_expression NE_OP relational_expression

   59 and_expression: equality_expression
   60               | and_expression '&' equality_expression

   61 exclusive_or_expression: and_expression
   62                        | exclusive_or_expression '^' and_expression

   63 inclusive_or_expression: exclusive_or_expression
   64                        | inclusive_or_expression '|' exclusive_or_expression

   65 logical_and_expression: inclusive_or_expression
   66                       | logical_and_expression AND_OP inclusive_or_expression

   67 logical_or_expression: logical_and_expression
   68                      | logical_or_expression OR_OP logical_and_expression

   69 conditional_expression: logical_or_expression
   70                       | logical_or_expression '?' expression ':' conditional_expression

   71 assignment_expression: conditional_expression
   72                      | unary_expression assignment_operator assignment_expression

   73 assignment_operator: '='
   74                    | MUL_ASSIGN
   75                    | DIV_ASSIGN
   76                    | MOD_ASSIGN
   77                    | ADD_ASSIGN
   78                    | SUB_ASSIGN
   79                    | LEFT_ASSIGN
   80                    | RIGHT_ASSIGN
   81                    | AND_ASSIGN
   82                    | XOR_ASSIGN
   83                    | OR_ASSIGN

   84 expression: assignment_expression
   85           | expression ',' assignment_expression

   86 constant_expression: conditional_expression

   87 declaration: declaration_specifiers ';'
   88            | declaration_specifiers init_declarator_list ';'
   89            | declaration_specifiers error
   90            | declaration_specifiers init_declarator_list error

   91 declaration_specifiers: storage_class_specifier declaration_specifiers
   92                       | storage_class_specifier
   93                       | type_specifier declaration_specifiers
   94                       | type_specifier
   95                       | type_qualifier declaration_specifiers
   96                       | type_qualifier
   97                       | declaration_specifiers '&'

   98 init_declarator_list: init_declarator
   99                     | init_declarator_list ',' init_declarator

  100 init_declarator: declarator '=' initializer
  101                | declarator

  102 storage_class_specifier: TYPEDEF
  103                        | EXTERN
  104                        | STATIC
  105                        | AUTO
  106                        | REGISTER

  107 type_specifier: VOID
  108               | CHAR
  109               | SHORT
  110               | INT
  111               | LONG
  112               | FLOAT
  113               | DOUBLE
  114               | SIGNED
  115               | UNSIGNED
  116               | BOOL
  117               | struct_or_union_specifier
  118               | class_specifier
  119               | enum_specifier
  120               | TYPEDEF_NAME

  121 $@1: ε

  122 class_specifier: CLASS '{' $@1 class_member_list '}'

  123 $@2: ε

  124 class_specifier: CLASS IDENTIFIER base_clause_opt '{' $@2 class_member_list '}'
  125                | CLASS IDENTIFIER base_clause_opt

  126 class_member_list: class_member
  127                  | class_member_list class_member

  128 class_member: access_specifier ':' '{' translation_unit '}'

  129 access_specifier: PUBLIC
  130                 | PRIVATE
  131                 | PROTECTED

  132 base_clause_opt: ':' base_specifier_list
  133                | ε

  134 base_specifier_list: base_specifier
  135                    | base_specifier_list ',' base_specifier

  136 base_specifier: access_specifier_opt IDENTIFIER

  137 access_specifier_opt: ε
  138                     | access_specifier

  139 $@3: ε

  140 struct_or_union_specifier: struct_or_union '{' $@3 struct_declaration_list '}'

  141 $@4: ε

  142 struct_or_union_specifier: struct_or_union IDENTIFIER '{' $@4 struct_declaration_list '}'
  143                          | struct_or_union IDENTIFIER

  144 struct_or_union: STRUCT
  145                | UNION

  146 struct_declaration_list: struct_declaration
  147                        | struct_declaration_list struct_declaration

  148 struct_declaration: specifier_qualifier_list ';'
  149                   | specifier_qualifier_list struct_declarator_list ';'

  150 specifier_qualifier_list: type_specifier specifier_qualifier_list
  151                         | type_specifier
  152                         | type_qualifier specifier_qualifier_list
  153                         | type_qualifier

  154 struct_declarator_list: struct_declarator
  155                       | struct_declarator_list ',' struct_declarator

  156 struct_declarator: ':' constant_expression
  157                  | declarator ':' constant_expression
  158                  | declarator

  159 enum_specifier: ENUM '{' enumerator_list '}'
  160               | ENUM '{' enumerator_list ',' '}'
  161               | ENUM IDENTIFIER '{' enumerator_list '}'
  162               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  163               | ENUM IDENTIFIER

  164 enumerator_list: enumerator
  165                | enumerator_list ',' enumerator

  166 enumerator: enumeration_constant '=' constant_expression
  167           | enumeration_constant

  168 type_qualifier: CONST
  169               | VOLATILE

  170 declarator: pointer direct_declarator
  171           | direct_declarator

  172 direct_declarator: IDENTIFIER
  173                  | '(' declarator ')'
  174                  | direct_declarator '[' ']'
  175                  | direct_declarator '[' assignment_expression ']'
  176                  | direct_declarator '(' parameter_type_list ')'
  177                  | direct_declarator '(' ')'
  178                  | direct_declarator '(' identifier_list ')'
  179                  | direct_declarator '[' assignment_expression error

  180 pointer: '*' type_qualifier_list pointer
  181        | '*' type_qualifier_list
  182        | '*' pointer
  183        | '*'

  184 type_qualifier_list: type_qualifier
  185                    | type_qualifier_list type_qualifier

  186 parameter_type_list: parameter_list

  187 parameter_list: parameter_declaration
  188               | parameter_list ',' parameter_declaration

  189 parameter_declaration: declaration_specifiers declarator

  190 identifier_list: IDENTIFIER
  191                | identifier_list ',' IDENTIFIER

  192 type_name: specifier_qualifier_list abstract_declarator
  193          | specifier_qualifier_list

  194 abstract_declarator: pointer direct_abstract_declarator
  195                    | pointer
  196                    | direct_abstract_declarator

  197 direct_abstract_declarator: '(' abstract_declarator ')'
  198                           | '[' ']'
  199                           | '[' assignment_expression ']'
  200                           | direct_abstract_declarator '[' ']'
  201                           | direct_abstract_declarator '[' assignment_expression ']'
  202                           | '(' ')'
  203                           | '(' parameter_type_list ')'
  204                           | direct_abstract_declarator '(' ')'
  205                           | direct_abstract_declarator '(' parameter_type_list ')'

  206 initializer: '{' initializer_list '}'
  207            | assignment_expression

  208 initializer_list: initializer
  209                 | initializer_list ',' initializer

  210 statement: labeled_statement

  211 $@5: ε

  212 statement: $@5 compound_statement
  213          | expression_statement
  214          | selection_statement
  215          | iteration_statement
  216          | jump_statement

  217 labeled_statement: IDENTIFIER ':' statement
  218                  | CASE constant_expression ':' statement
  219                  | DEFAULT ':' statement

  220 compound_statement: '{' '}'
  221                   | '{' block_item_list '}'
  222                   | '{' block_item_list error

  223 block_item_list: block_item
  224                | block_item_list block_item

  225 block_item: declaration
  226           | statement

  227 expression_statement: ';'
  228                     | expression ';'
  229                     | expression error

  230 selection_statement: IF '(' expression ')' statement ELSE statement
  231                    | IF '(' expression ')' statement
  232                    | SWITCH '(' expression ')' statement

  233 iteration_statement: WHILE '(' expression ')' statement
  234                    | DO statement WHILE '(' expression ')' ';'
  235                    | DO statement UNTIL '(' expression ')' ';'
  236                    | FOR '(' PushScope expression_statement expression_statement ')' statement
  237                    | FOR '(' PushScope expression_statement expression_statement expression ')' statement
  238                    | FOR '(' PushScope declaration expression_statement ')' statement
  239                    | FOR '(' PushScope declaration expression_statement expression ')' statement

  240 jump_statement: GOTO IDENTIFIER ';'
  241               | CONTINUE ';'
  242               | BREAK ';'
  243               | RETURN ';'
  244               | RETURN expression ';'

  245 Global: translation_unit

  246 translation_unit: external_declaration
  247                 | translation_unit external_declaration

  248 external_declaration: function_definition
  249                     | declaration

  250 $@6: ε

  251 function_definition: declaration_specifiers declarator declaration_list $@6 compound_statement

  252 $@7: ε

  253 function_definition: declaration_specifiers declarator $@7 compound_statement
  254                    | declaration_specifiers declarator error

  255 declaration_list: declaration
  256                 | declaration_list declaration

  257 PushScope: ε


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 37
    '%' (37) 44
    '&' (38) 32 60 97
    '(' (40) 4 5 18 19 31 39 40 173 176 177 178 197 202 203 204 205 230 231 232 233 234 235 236 237 238 239
    ')' (41) 4 18 19 31 39 173 176 177 178 197 202 203 204 205 230 231 232 233 234 235 236 237 238 239
    '*' (42) 33 42 180 181 182 183
    '+' (43) 34 46
    ',' (44) 25 85 99 135 155 160 162 165 188 191 209
    '-' (45) 35 47
    '.' (46) 20
    '/' (47) 43
    ':' (58) 70 128 132 156 157 217 218 219
    ';' (59) 87 88 148 149 227 228 234 235 240 241 242 243 244
    '<' (60) 52
    '=' (61) 73 100 166
    '>' (62) 53
    '?' (63) 70
    '[' (91) 17 174 175 179 198 199 200 201
    ']' (93) 17 174 175 198 199 200 201
    '^' (94) 62
    '{' (123) 122 124 128 140 142 159 160 161 162 206 220 221 222
    '|' (124) 64
    '}' (125) 122 124 128 140 142 159 160 161 162 206 220 221
    '~' (126) 36
    error (256) 5 40 89 90 179 222 229 254
    IDENTIFIER <atr> (258) 1 10 20 21 124 125 136 142 143 161 162 163 172 190 191 217 240
    STRING_LIT <atr> (259) 13
    CHAR_LIT <atr> (260) 14
    I_CONSTANT <atr> (261) 6
    F_CONSTANT <atr> (262) 7
    TRUE <atr> (263) 11
    FALSE <atr> (264) 12
    PTR_OP (265) 21
    INC_OP (266) 22 27
    DEC_OP (267) 23 28
    LEFT_OP (268) 49
    RIGHT_OP (269) 50
    LE_OP (270) 54
    GE_OP (271) 55
    EQ_OP (272) 57
    NE_OP (273) 58
    AND_OP (274) 66
    OR_OP (275) 68
    MUL_ASSIGN (276) 74
    DIV_ASSIGN (277) 75
    MOD_ASSIGN (278) 76
    ADD_ASSIGN (279) 77
    SUB_ASSIGN (280) 78
    LEFT_ASSIGN (281) 79
    RIGHT_ASSIGN (282) 80
    AND_ASSIGN (283) 81
    XOR_ASSIGN (284) 82
    OR_ASSIGN (285) 83
    TYPEDEF_NAME (286) 120
    TYPEDEF (287) 102
    EXTERN (288) 103
    STATIC (289) 104
    AUTO (290) 105
    REGISTER (291) 106
    SIZEOF (292) 30 31
    CHAR (293) 108
    SHORT (294) 109
    INT (295) 110
    LONG (296) 111
    SIGNED (297) 114
    UNSIGNED (298) 115
    FLOAT (299) 112
    DOUBLE (300) 113
    CONST (301) 168
    VOLATILE (302) 169
    VOID (303) 107
    BOOL (304) 116
    STRUCT (305) 144
    UNION (306) 145
    ENUM (307) 159 160 161 162 163
    CASE (308) 218
    DEFAULT (309) 219
    IF (310) 230 231
    ELSE (311) 230
    SWITCH (312) 232
    WHILE (313) 233 234
    DO (314) 234 235
    FOR (315) 236 237 238 239
    GOTO (316) 240
    CONTINUE (317) 241
    BREAK (318) 242
    RETURN (319) 243 244
    UNTIL (320) 235
    FUNC_NAME (321) 15
    ENUMERATION_CONSTANT (322) 8
    CLASS <atr> (323) 122 124 125
    PUBLIC (324) 129
    PRIVATE (325) 130
    PROTECTED (326) 131


Nonterminals, with rules where they appear

    $accept (96)
        on left: 0
    primary_expression <atr> (97)
        on left: 1 2 3 4 5
        on right: 16
    constant <atr> (98)
        on left: 6 7 8 9
        on right: 2
    enumeration_constant (99)
        on left: 10
        on right: 166 167
    BOOLEAN <atr> (100)
        on left: 11 12
        on right: 9
    string <atr> (101)
        on left: 13 14 15
        on right: 3
    postfix_expression <atr> (102)
        on left: 16 17 18 19 20 21 22 23
        on right: 17 18 19 20 21 22 23 26
    argument_expression_list <atr> (103)
        on left: 24 25
        on right: 19 25
    unary_expression <atr> (104)
        on left: 26 27 28 29 30 31
        on right: 27 28 30 38 72
    unary_operator <atr> (105)
        on left: 32 33 34 35 36 37
        on right: 29
    cast_expression <atr> (106)
        on left: 38 39 40
        on right: 29 39 40 41 42 43 44
    multiplicative_expression <atr> (107)
        on left: 41 42 43 44
        on right: 42 43 44 45 46 47
    additive_expression <atr> (108)
        on left: 45 46 47
        on right: 46 47 48 49 50
    shift_expression <atr> (109)
        on left: 48 49 50
        on right: 49 50 51 52 53 54 55
    relational_expression <atr> (110)
        on left: 51 52 53 54 55
        on right: 52 53 54 55 56 57 58
    equality_expression <atr> (111)
        on left: 56 57 58
        on right: 57 58 59 60
    and_expression <atr> (112)
        on left: 59 60
        on right: 60 61 62
    exclusive_or_expression <atr> (113)
        on left: 61 62
        on right: 62 63 64
    inclusive_or_expression <atr> (114)
        on left: 63 64
        on right: 64 65 66
    logical_and_expression <atr> (115)
        on left: 65 66
        on right: 66 67 68
    logical_or_expression <atr> (116)
        on left: 67 68
        on right: 68 69 70
    conditional_expression <atr> (117)
        on left: 69 70
        on right: 70 71 86
    assignment_expression <atr> (118)
        on left: 71 72
        on right: 24 25 72 84 85 175 179 199 201 207
    assignment_operator <atr> (119)
        on left: 73 74 75 76 77 78 79 80 81 82 83
        on right: 72
    expression <atr> (120)
        on left: 84 85
        on right: 4 5 17 70 85 228 229 230 231 232 233 234 235 237 239 244
    constant_expression <atr> (121)
        on left: 86
        on right: 156 157 166 218
    declaration <atr> (122)
        on left: 87 88 89 90
        on right: 225 238 239 249 255 256
    declaration_specifiers <atr> (123)
        on left: 91 92 93 94 95 96 97
        on right: 87 88 89 90 91 93 95 97 189 251 253 254
    init_declarator_list <atr> (124)
        on left: 98 99
        on right: 88 90 99
    init_declarator <atr> (125)
        on left: 100 101
        on right: 98 99
    storage_class_specifier <atr> (126)
        on left: 102 103 104 105 106
        on right: 91 92
    type_specifier <atr> (127)
        on left: 107 108 109 110 111 112 113 114 115 116 117 118 119 120
        on right: 93 94 150 151
    class_specifier <atr> (128)
        on left: 122 124 125
        on right: 118
    $@1 (129)
        on left: 121
        on right: 122
    $@2 (130)
        on left: 123
        on right: 124
    class_member_list (131)
        on left: 126 127
        on right: 122 124 127
    class_member (132)
        on left: 128
        on right: 126 127
    access_specifier <atr> (133)
        on left: 129 130 131
        on right: 128 138
    base_clause_opt <atr> (134)
        on left: 132 133
        on right: 124 125
    base_specifier_list <atr> (135)
        on left: 134 135
        on right: 132 135
    base_specifier <atr> (136)
        on left: 136
        on right: 134 135
    access_specifier_opt <atr> (137)
        on left: 137 138
        on right: 136
    struct_or_union_specifier <atr> (138)
        on left: 140 142 143
        on right: 117
    $@3 (139)
        on left: 139
        on right: 140
    $@4 (140)
        on left: 141
        on right: 142
    struct_or_union <atr> (141)
        on left: 144 145
        on right: 140 142 143
    struct_declaration_list (142)
        on left: 146 147
        on right: 140 142 147
    struct_declaration <atr> (143)
        on left: 148 149
        on right: 146 147
    specifier_qualifier_list <atr> (144)
        on left: 150 151 152 153
        on right: 148 149 150 152 192 193
    struct_declarator_list <atr> (145)
        on left: 154 155
        on right: 149 155
    struct_declarator <atr> (146)
        on left: 156 157 158
        on right: 154 155
    enum_specifier <atr> (147)
        on left: 159 160 161 162 163
        on right: 119
    enumerator_list (148)
        on left: 164 165
        on right: 159 160 161 162 165
    enumerator (149)
        on left: 166 167
        on right: 164 165
    type_qualifier <atr> (150)
        on left: 168 169
        on right: 95 96 152 153 184 185
    declarator <atr> (151)
        on left: 170 171
        on right: 100 101 157 158 173 189 251 253 254
    direct_declarator <atr> (152)
        on left: 172 173 174 175 176 177 178 179
        on right: 170 171 174 175 176 177 178 179
    pointer <atr> (153)
        on left: 180 181 182 183
        on right: 170 180 182 194 195
    type_qualifier_list <atr> (154)
        on left: 184 185
        on right: 180 181 185
    parameter_type_list <atr> (155)
        on left: 186
        on right: 176 203 205
    parameter_list <atr> (156)
        on left: 187 188
        on right: 186 188
    parameter_declaration <atr> (157)
        on left: 189
        on right: 187 188
    identifier_list (158)
        on left: 190 191
        on right: 178 191
    type_name <atr> (159)
        on left: 192 193
        on right: 31 39 40
    abstract_declarator <atr> (160)
        on left: 194 195 196
        on right: 192 197
    direct_abstract_declarator <atr> (161)
        on left: 197 198 199 200 201 202 203 204 205
        on right: 194 196 200 201 204 205
    initializer <atr> (162)
        on left: 206 207
        on right: 100 208 209
    initializer_list <atr> (163)
        on left: 208 209
        on right: 206 209
    statement <atr> (164)
        on left: 210 212 213 214 215 216
        on right: 217 218 219 226 230 231 232 233 234 235 236 237 238 239
    $@5 (165)
        on left: 211
        on right: 212
    labeled_statement <atr> (166)
        on left: 217 218 219
        on right: 210
    compound_statement <atr> (167)
        on left: 220 221 222
        on right: 212 251 253
    block_item_list <atr> (168)
        on left: 223 224
        on right: 221 222 224
    block_item <atr> (169)
        on left: 225 226
        on right: 223 224
    expression_statement <atr> (170)
        on left: 227 228 229
        on right: 213 236 237 238 239
    selection_statement <atr> (171)
        on left: 230 231 232
        on right: 214
    iteration_statement <atr> (172)
        on left: 233 234 235 236 237 238 239
        on right: 215
    jump_statement <atr> (173)
        on left: 240 241 242 243 244
        on right: 216
    Global <atr> (174)
        on left: 245
        on right: 0
    translation_unit <atr> (175)
        on left: 246 247
        on right: 128 245 247
    external_declaration <atr> (176)
        on left: 248 249
        on right: 246 247
    function_definition <atr> (177)
        on left: 251 253 254
        on right: 248
    $@6 (178)
        on left: 250
        on right: 251
    $@7 (179)
        on left: 252
        on right: 253
    declaration_list <atr> (180)
        on left: 255 256
        on right: 251 256
    PushScope (181)
        on left: 257
        on right: 236 237 238 239


State 0

    0 $accept: • Global $end

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    CHAR          shift, and go to state 7
    SHORT         shift, and go to state 8
    INT           shift, and go to state 9
    LONG          shift, and go to state 10
    SIGNED        shift, and go to state 11
    UNSIGNED      shift, and go to state 12
    FLOAT         shift, and go to state 13
    DOUBLE        shift, and go to state 14
    CONST         shift, and go to state 15
    VOLATILE      shift, and go to state 16
    VOID          shift, and go to state 17
    BOOL          shift, and go to state 18
    STRUCT        shift, and go to state 19
    UNION         shift, and go to state 20
    ENUM          shift, and go to state 21
    CLASS         shift, and go to state 22

    declaration                go to state 23
    declaration_specifiers     go to state 24
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    class_specifier            go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    Global                     go to state 32
    translation_unit           go to state 33
    external_declaration       go to state 34
    function_definition        go to state 35


State 1

  120 type_specifier: TYPEDEF_NAME •

    $default  reduce using rule 120 (type_specifier)


State 2

  102 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 102 (storage_class_specifier)


State 3

  103 storage_class_specifier: EXTERN •

    $default  reduce using rule 103 (storage_class_specifier)


State 4

  104 storage_class_specifier: STATIC •

    $default  reduce using rule 104 (storage_class_specifier)


State 5

  105 storage_class_specifier: AUTO •

    $default  reduce using rule 105 (storage_class_specifier)


State 6

  106 storage_class_specifier: REGISTER •

    $default  reduce using rule 106 (storage_class_specifier)


State 7

  108 type_specifier: CHAR •

    $default  reduce using rule 108 (type_specifier)


State 8

  109 type_specifier: SHORT •

    $default  reduce using rule 109 (type_specifier)


State 9

  110 type_specifier: INT •

    $default  reduce using rule 110 (type_specifier)


State 10

  111 type_specifier: LONG •

    $default  reduce using rule 111 (type_specifier)


State 11

  114 type_specifier: SIGNED •

    $default  reduce using rule 114 (type_specifier)


State 12

  115 type_specifier: UNSIGNED •

    $default  reduce using rule 115 (type_specifier)


State 13

  112 type_specifier: FLOAT •

    $default  reduce using rule 112 (type_specifier)


State 14

  113 type_specifier: DOUBLE •

    $default  reduce using rule 113 (type_specifier)


State 15

  168 type_qualifier: CONST •

    $default  reduce using rule 168 (type_qualifier)


State 16

  169 type_qualifier: VOLATILE •

    $default  reduce using rule 169 (type_qualifier)


State 17

  107 type_specifier: VOID •

    $default  reduce using rule 107 (type_specifier)


State 18

  116 type_specifier: BOOL •

    $default  reduce using rule 116 (type_specifier)


State 19

  144 struct_or_union: STRUCT •

    $default  reduce using rule 144 (struct_or_union)


State 20

  145 struct_or_union: UNION •

    $default  reduce using rule 145 (struct_or_union)


State 21

  159 enum_specifier: ENUM • '{' enumerator_list '}'
  160               | ENUM • '{' enumerator_list ',' '}'
  161               | ENUM • IDENTIFIER '{' enumerator_list '}'
  162               | ENUM • IDENTIFIER '{' enumerator_list ',' '}'
  163               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 36
    '{'         shift, and go to state 37


State 22

  122 class_specifier: CLASS • '{' $@1 class_member_list '}'
  124                | CLASS • IDENTIFIER base_clause_opt '{' $@2 class_member_list '}'
  125                | CLASS • IDENTIFIER base_clause_opt

    IDENTIFIER  shift, and go to state 38
    '{'         shift, and go to state 39


State 23

  249 external_declaration: declaration •

    $default  reduce using rule 249 (external_declaration)


State 24

   87 declaration: declaration_specifiers • ';'
   88            | declaration_specifiers • init_declarator_list ';'
   89            | declaration_specifiers • error
   90            | declaration_specifiers • init_declarator_list error
   97 declaration_specifiers: declaration_specifiers • '&'
  251 function_definition: declaration_specifiers • declarator declaration_list $@6 compound_statement
  253                    | declaration_specifiers • declarator $@7 compound_statement
  254                    | declaration_specifiers • declarator error

    error       shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 42
    '&'         shift, and go to state 43
    '*'         shift, and go to state 44
    ';'         shift, and go to state 45

    init_declarator_list  go to state 46
    init_declarator       go to state 47
    declarator            go to state 48
    direct_declarator     go to state 49
    pointer               go to state 50


State 25

   91 declaration_specifiers: storage_class_specifier • declaration_specifiers
   92                       | storage_class_specifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    CHAR          shift, and go to state 7
    SHORT         shift, and go to state 8
    INT           shift, and go to state 9
    LONG          shift, and go to state 10
    SIGNED        shift, and go to state 11
    UNSIGNED      shift, and go to state 12
    FLOAT         shift, and go to state 13
    DOUBLE        shift, and go to state 14
    CONST         shift, and go to state 15
    VOLATILE      shift, and go to state 16
    VOID          shift, and go to state 17
    BOOL          shift, and go to state 18
    STRUCT        shift, and go to state 19
    UNION         shift, and go to state 20
    ENUM          shift, and go to state 21
    CLASS         shift, and go to state 22

    $default  reduce using rule 92 (declaration_specifiers)

    declaration_specifiers     go to state 51
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    class_specifier            go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 26

   93 declaration_specifiers: type_specifier • declaration_specifiers
   94                       | type_specifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    CHAR          shift, and go to state 7
    SHORT         shift, and go to state 8
    INT           shift, and go to state 9
    LONG          shift, and go to state 10
    SIGNED        shift, and go to state 11
    UNSIGNED      shift, and go to state 12
    FLOAT         shift, and go to state 13
    DOUBLE        shift, and go to state 14
    CONST         shift, and go to state 15
    VOLATILE      shift, and go to state 16
    VOID          shift, and go to state 17
    BOOL          shift, and go to state 18
    STRUCT        shift, and go to state 19
    UNION         shift, and go to state 20
    ENUM          shift, and go to state 21
    CLASS         shift, and go to state 22

    $default  reduce using rule 94 (declaration_specifiers)

    declaration_specifiers     go to state 52
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    class_specifier            go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 27

  118 type_specifier: class_specifier •

    $default  reduce using rule 118 (type_specifier)


State 28

  117 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 117 (type_specifier)


State 29

  140 struct_or_union_specifier: struct_or_union • '{' $@3 struct_declaration_list '}'
  142                          | struct_or_union • IDENTIFIER '{' $@4 struct_declaration_list '}'
  143                          | struct_or_union • IDENTIFIER

    IDENTIFIER  shift, and go to state 53
    '{'         shift, and go to state 54


State 30

  119 type_specifier: enum_specifier •

    $default  reduce using rule 119 (type_specifier)


State 31

   95 declaration_specifiers: type_qualifier • declaration_specifiers
   96                       | type_qualifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    CHAR          shift, and go to state 7
    SHORT         shift, and go to state 8
    INT           shift, and go to state 9
    LONG          shift, and go to state 10
    SIGNED        shift, and go to state 11
    UNSIGNED      shift, and go to state 12
    FLOAT         shift, and go to state 13
    DOUBLE        shift, and go to state 14
    CONST         shift, and go to state 15
    VOLATILE      shift, and go to state 16
    VOID          shift, and go to state 17
    BOOL          shift, and go to state 18
    STRUCT        shift, and go to state 19
    UNION         shift, and go to state 20
    ENUM          shift, and go to state 21
    CLASS         shift, and go to state 22

    $default  reduce using rule 96 (declaration_specifiers)

    declaration_specifiers     go to state 55
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    class_specifier            go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 32

    0 $accept: Global • $end

    $end  shift, and go to state 56


State 33

  245 Global: translation_unit •
  247 translation_unit: translation_unit • external_declaration

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    CHAR          shift, and go to state 7
    SHORT         shift, and go to state 8
    INT           shift, and go to state 9
    LONG          shift, and go to state 10
    SIGNED        shift, and go to state 11
    UNSIGNED      shift, and go to state 12
    FLOAT         shift, and go to state 13
    DOUBLE        shift, and go to state 14
    CONST         shift, and go to state 15
    VOLATILE      shift, and go to state 16
    VOID          shift, and go to state 17
    BOOL          shift, and go to state 18
    STRUCT        shift, and go to state 19
    UNION         shift, and go to state 20
    ENUM          shift, and go to state 21
    CLASS         shift, and go to state 22

    $default  reduce using rule 245 (Global)

    declaration                go to state 23
    declaration_specifiers     go to state 24
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    class_specifier            go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    external_declaration       go to state 57
    function_definition        go to state 35


State 34

  246 translation_unit: external_declaration •

    $default  reduce using rule 246 (translation_unit)


State 35

  248 external_declaration: function_definition •

    $default  reduce using rule 248 (external_declaration)


State 36

  161 enum_specifier: ENUM IDENTIFIER • '{' enumerator_list '}'
  162               | ENUM IDENTIFIER • '{' enumerator_list ',' '}'
  163               | ENUM IDENTIFIER •

    '{'  shift, and go to state 58

    $default  reduce using rule 163 (enum_specifier)


State 37

  159 enum_specifier: ENUM '{' • enumerator_list '}'
  160               | ENUM '{' • enumerator_list ',' '}'

    IDENTIFIER  shift, and go to state 59

    enumeration_constant  go to state 60
    enumerator_list       go to state 61
    enumerator            go to state 62


State 38

  124 class_specifier: CLASS IDENTIFIER • base_clause_opt '{' $@2 class_member_list '}'
  125                | CLASS IDENTIFIER • base_clause_opt

    ':'  shift, and go to state 63

    ':'       [reduce using rule 133 (base_clause_opt)]
    $default  reduce using rule 133 (base_clause_opt)

    base_clause_opt  go to state 64


State 39

  122 class_specifier: CLASS '{' • $@1 class_member_list '}'

    $default  reduce using rule 121 ($@1)

    $@1  go to state 65


State 40

   89 declaration: declaration_specifiers error •

    $default  reduce using rule 89 (declaration)


State 41

  172 direct_declarator: IDENTIFIER •

    $default  reduce using rule 172 (direct_declarator)


State 42

  173 direct_declarator: '(' • declarator ')'

    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 42
    '*'         shift, and go to state 44

    declarator         go to state 66
    direct_declarator  go to state 49
    pointer            go to state 50


State 43

   97 declaration_specifiers: declaration_specifiers '&' •

    $default  reduce using rule 97 (declaration_specifiers)


State 44

  180 pointer: '*' • type_qualifier_list pointer
  181        | '*' • type_qualifier_list
  182        | '*' • pointer
  183        | '*' •
